# Math_Simulation

./: CMakeLists.txt  comm.h  getopt.cpp  getopt.h  main.cpp  makefile  mpi_manage.cpp  mpi_manage.h  readme.md  sim_lib.cpp  sim_lib.h  socketFunctions.cpp  socketFunctions.h  传输数据流程.md  鲲鹏系统使用手册.doc
